@@ -43,5 +43,6 @@
 
  * Add a test suite for configuration and ACL parsing.
 
- * Add a distinguished protocol error for too many arguments to a command
-   so that we can send a more useful custom error message.
+ * Maximum argument count and maximum data size in MESSAGE_COMMAND should
+   be configurable parameters of the server rather than hard-coded
+   values.  This may need to wait for better configuration parsing.
