@@ -216,8 +216,14 @@
         that gives the total number of command arguments.  For each
         argument, there is then a length and argument data pair, where the
         length is a four-byte number in network byte order indicating the
-        number of octets of data in the following argument.  Both number
-        of arguments and length may be 0.</t>
+        number of octets of data in the following argument.  Argument
+        length may be 0, but there MUST be at least one argument.</t>
+
+        <t>Servers may impose limits on the number of arguments and the
+        size of argument data to limit resource usage.  If the client
+        message exceeds one of those limits, the server MUST respond with
+        MESSAGE_ERROR with an error code of ERROR_TOOMANY_ARGS or
+        ERROR_TOOMUCH_DATA as appropriate.</t>
       </section>
 
       <section anchor='output' title='MESSAGE_OUTPUT and MESSAGE_STATUS'>
@@ -286,6 +292,8 @@
     4  ERROR_BAD_COMMAND        Invalid command format in token
     5  ERROR_UNKNOWN_COMMAND    Unknown command
     6  ERROR_ACCESS             Access denied
+    7  ERROR_TOOMANY_ARGS       Argument count exceeds server limit
+    8  ERROR_TOOMUCH_DATA       Argument size exceeds server limit
           </artwork>
         </figure>
 
